# MatrixMult

./: .gitignore  CMakeLists.txt  clockcycle.h  main.c  main.h  makefile  matrix.c  matrix.cu  matrix.h  matrix_mpi.c  matrix_mpi.h  slurmMain.sh  testSuite.sh
data/: slurm-1874028.out  slurm-1874029.out  slurm-1874030.out  slurm-1874031.out  slurm-1874032.out  slurm-1874033.out  slurm-1874034.out  slurm-1874035.out  slurm-1874036.out  slurm-1874037.out  slurm-1874038.out  slurm-1874039.out  slurm-1874040.out
